--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    permissions: # <-- ADD THIS BLOCK
+      checks: write
+      contents: read
     
     steps:
     - name: Checkout code
