--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,13 +8,14 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # Use tolower() to ensure the image name is always lowercase
+  IMAGE_NAME: ${{ github.repository | tolower }}
 
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    permissions: # <-- ADD THIS BLOCK
+    permissions:
       checks: write
       contents: read
     
@@ -40,6 +41,7 @@ jobs:
       
     - name: Generate test report
       uses: dorny/test-reporter@v1
+      # Run this step even if tests fail to report the results
       if: success() || failure()
       with:
         name: Maven Tests
@@ -81,6 +83,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: [test, build]
+    # Only run on push to the main branch
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     permissions:
@@ -94,29 +97,23 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Log in to Container Registry
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Extract metadata
+    - name: Extract metadata for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-          
+        
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -129,6 +126,9 @@ jobs:
     needs: docker
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
+    permissions:
+      security-events: write
+      
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -136,7 +136,8 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        # The image-ref will now correctly use the lowercase name
+        image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest'
         format: 'sarif'
         output: 'trivy-results.sarif'
         
